7th lab (without singltone CollectionManager support many collections)